--- a/Net/pom.xml
+++ b/Net/pom.xml
@@ -8,29 +8,15 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>Net</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.leber.basetools</groupId>
-            <artifactId>JavaBaseUtils</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.8</version>
         </dependency>
         <dependency>
             <groupId>org.leber.basetools</groupId>
-            <artifactId>JavaBaseUtils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <artifactId>Base</artifactId>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
 </project>
