--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
                 <version>${javax.json.version}</version>
             </dependency>
             <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>2.4.7</version>
+            </dependency>
+            <dependency>
                 <groupId>com.jamesmurty.utils</groupId>
                 <artifactId>java-xmlbuilder</artifactId>
                 <version>1.3</version>
