add ability to read system csv

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
                 <version>5.4.2</version>
                 <scope>test</scope>
             </dependency>
+            <!--dependency>
+                <groupId>com.jsoniter</groupId>
+                <artifactId>jsoniter</artifactId>
+                <version>0.9.19</version>
+            </dependency-->
         </dependencies>
     </dependencyManagement>
 </project>
