--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
     <groupId>org.leber.basetools</groupId>
     <artifactId>JavaBaseUtils</artifactId>
     <packaging>pom</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.15.1</version>
+        </dependency>
+    </dependencies>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <commons-collections.version>4.3</commons-collections.version>
@@ -81,7 +88,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>${commons-io.version}</version>
+                <version>2.15.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
