--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -53,6 +53,10 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
